--- a/ReedSolomon/ReedSolomon/ReedSolomon.csproj
+++ b/ReedSolomon/ReedSolomon/ReedSolomon.csproj
@@ -13,6 +13,21 @@
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 
 		<Copyright>Witteborn</Copyright>
+
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <None Include="..\..\LICENSE">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
 
 </Project>
