--- a/ReedSolomon/ReedSolomon/ReedSolomon.csproj
+++ b/ReedSolomon/ReedSolomon/ReedSolomon.csproj
@@ -11,7 +11,7 @@
 		<PackageProjectUrl>https://github.com/Witteborn/ReedSolomon</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/Witteborn/ReedSolomon</RepositoryUrl>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-
+		<Version>1.1.0</Version>
 		<Copyright>Witteborn</Copyright>
 
 		<PackageReadmeFile>README.md</PackageReadmeFile>
@@ -20,14 +20,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <None Include="..\..\LICENSE">
-	    <Pack>True</Pack>
-	    <PackagePath>\</PackagePath>
-	  </None>
-	  <None Include="..\..\README.md">
-	    <Pack>True</Pack>
-	    <PackagePath>\</PackagePath>
-	  </None>
+		<None Include="..\..\LICENSE">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+		<None Include="..\..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 	</ItemGroup>
 
 </Project>
